--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
-spring.application.name=data-handler-server
+spring.application.name=datahandlerserver
 server.port=8080
+
+# It is pointing to localhost and Eureka is no longer running on localhost, localhost in this case is the individual containers.
+# eurekaserver refers to an entry (service) in the docker-compose.yml file
+eureka.client.serviceUrl.defaultZone=http://eurekaserver:8761/eureka
